# deid-local

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-hpc.txt  requirements-mac.txt  requirements.txt
.codex/environments/: environment.toml
.plans/: 2026-03-05-hpc-llm-port.md  20260306-hpc-vllm-serve.md  README.md  template.md
docs/: README.md  deployment.md  hpc-glibc-partition-note.md  hpc-vllm-guide.md  hpc-vllm-manual-test.md
examples/: README.md
scripts/: README.md  bootstrap_hpc.sh  bootstrap_mac.sh
scripts/deployment/hpc/: check_vllm_status.sh  download_vllm_model.sh  fetch_model.sh  llama_cpp_smoke.sbatch  setup_env.sh  stop_vllm_serve.sh  submit_llama_cpp_smoke.sh  submit_vllm_serve.sh  submit_vllm_smoke.sh  verify_vllm_serve.sh  vllm_serve.sbatch  vllm_smoke.sbatch
scripts/deployment/macos/: run_chat_window.sh  setup_llama_cpp.sh  verify_llama_cpp_e2e.sh  verify_vllm_e2e.sh
src/deid_local/: __init__.py  __main__.py  cli.py
src/deid_local/adapters/: __init__.py
src/deid_local/core/: __init__.py  chat_service.py  (+3 more)
src/llm_local/: __init__.py  __main__.py  cli.py
tests/fixtures/: vllm_chat_template.jinja
tests/integration/: test_chat_app.py  test_concurrent_requests.py  test_http_cli.py  test_llama_cpp_e2e.py  test_vllm_e2e.py
tests/unit/: test_chat_service.py  test_cli.py  test_endpoint_discovery.py  test_health.py  test_llm_settings.py  test_model_assets.py  test_providers.py  test_runtime.py  test_server_status.py  test_slurm_scripts.py
(+19 files in other folders)
