[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "deid-local"
version = "0.1.0"
description = "Local-first Python scaffolding for LLM workflows that move from macOS development to Linux HPC GPUs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Repository maintainers" },
]
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]
llama_cpp = [
  "llama-cpp-python>=0.2.90",
]

[project.scripts]
deid-local = "deid_local.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: marks tests that require longer runtime or external dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
